fixed minor layout issues with dashboard item navs

--- a/public/quiz-create/css/sass/_dashboard.scss
+++ b/public/quiz-create/css/sass/_dashboard.scss
@@ -107,6 +107,10 @@
         padding-bottom: 0;
         margin-right: 10px;
 
+        a {
+            font-weight: normal;
+        }
+
         &:last-of-type {
             margin-right: 0;
         }
@@ -148,12 +152,13 @@
     }
 
     .enp-dash-item__menu-action {
+        height: 24px;
         background: none;
         border: none;
         color: #444;
         padding: 0;
         position: absolute;
-        bottom: 0;
+        bottom: 0.2rem;
         right: 0;
         cursor: pointer;
     }
@@ -170,8 +175,12 @@
         left: 0;
     }
 
+    &.enp-dash-list--focus-one,
     .enp-dash-list--focus-one {
         background: $gray;
+    }
+
+    .enp-dash-list--focus-one {
 
         .enp-dash-item {
             opacity: 0.675;
